feat(agent): add durable report read projection